Adição do style das páginas

--- a/src/main/webapp/resultado.xhtml
+++ b/src/main/webapp/resultado.xhtml
@@ -8,14 +8,14 @@
 	<ui:define name="title">Resultado</ui:define>
 	<ui:define name="header">Aproveite seu resultado!</ui:define>
 	<ui:define name="content">
-	
+
 		<h:body>
 			<h2>Dados do Usuário Submetidos</h2>
-			<p>Nome: #{usuarioBean.usuario.nome}</p>
-			<p>Email: #{usuarioBean.usuario.email}</p>
-			<p>Gênero: #{usuarioBean.usuario.genero}</p>
-			<p>Idade: #{usuarioBean.usuario.idade}</p>
-			<p>Comentários: #{usuarioBean.usuario.comentario}</p>
+				<p class="primeiro">Nome: #{usuarioBean.usuario.nome}</p>
+				<p>Email: #{usuarioBean.usuario.email}</p>
+				<p>Gênero: #{usuarioBean.usuario.genero}</p>
+				<p>Idade: #{usuarioBean.usuario.idade}</p>
+				<p>Comentários: #{usuarioBean.usuario.comentario}</p>
 		</h:body>
 
 	</ui:define>
