Alteração no style

--- a/pweb-2023.2-jsf/src/main/webapp/resultado.xhtml
+++ b/pweb-2023.2-jsf/src/main/webapp/resultado.xhtml
@@ -6,7 +6,7 @@
 
 <ui:composition template="/WEB-INF/templates/template.xhtml">
 	<ui:define name="title">Resultado</ui:define>
-	<ui:define name="header">Aproveite seu resultado!</ui:define>
+	<ui:define name="header">Veja seu resultado!</ui:define>
 	<ui:define name="content">
 
 		<h:body>
